# s3-copy-multi-profile

./: .gitignore  README.md  pyproject.toml
s3-copy-multi-profile/: s3-copy-multi-profile.py
