[tool.poetry]
name = "s3-copy-multi-profile"
version = "0.1.0"
description = "AWS S3 utility used to copy S3 objects from one bucket to another using two boto3 sessions."
authors = ["apatekar <alan.patekar1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.37"
aws-assume-role-lib = "^2.9.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
